fixed all overflow

--- a/src/components/main/Main.module.css
+++ b/src/components/main/Main.module.css
@@ -1,15 +1,14 @@
 .main {
   position: relative;
-  width: 100%;
   height: 100%;
   border-radius: 0.5rem;
 }
 
 .content {
   position: relative;
-  width: 100%;
   height: 100%;
   margin-left: 2rem;
+  margin-bottom: 5rem;
 }
 
 .adBar {
