--- a/src/components/main/skills/SkillsTab.module.css
+++ b/src/components/main/skills/SkillsTab.module.css
@@ -1,5 +1,4 @@
 .modal {
-  width: 100%;
   height: 100%;
   display: flex;
   justify-content: center;
@@ -8,7 +7,7 @@
 
 .modalInner {
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: flex-start;
   gap: 1rem;
   flex-wrap: wrap;
